# starkit

./: .doctr-files  .readthedocs.yml  .travis.yml  PLOT FIRST MISSION.ipynb  README.md  README.rst  Starkit_plot_spectra_slider.ipynb  app.py  conda_requirements.txt  deploy_docs.sh  ebv_from_coords.py  fitting.html  genindex.html  getting_started.html  github_deploy_key_starkit_starkit.enc  index.html  installation.html  objects.inv  search.html  searchindex.js  setup.cfg  setup.py  starkit_env27.yml  starkit_env3.yml  starkit_env3_no_build.yml  starkit_env3_update.yml  starkit_gridfix.yml  starkit_gridfix_macos.yml  test_python3.ipynb
.ipynb_checkpoints/: Starkit_plot_spectra_slider-checkpoint.ipynb
_sources/: index.rst.txt
_sources/io/: gridkit_fileformat.rst.txt  index.rst.txt  reading_bosz.ipynb.txt
_static/: documentation_options.js
_templates/autosummary/: base.html  class.html  module.html
azure_pipelines/: deploy_docs.sh  docs_deployment_pipeline.yml  testing_pipeline.yml
docs/: conf.py  fitting.rst  getting_started.rst  index.rst  installation.rst  rtd-pip-requirements
docs/examples/: Starkit Photometry and Spectroscopy Combined Model.ipynb  (+3 more)
dustmaps_prelim/: README.md  main.py
examples/: index.html  interactive_spectrum.html  starkit_photometry.html
io/: available_grids.html  gridkit_fileformat.html  index.html  phoenix.html  reading_bosz.html  reading_moehler_telluric.html  reading_phoenix.html
licenses/: LICENSE.rst
starkit/: __init__.py  _astropy_init.py  config.py  conftest.py  fix_spectrum1d.py  func_EBV.py  star_extinction_model.py
(+58 files in other folders)
