[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = starkit
description = Collection of tools for working with stellar data
long_description = Collection of tools for working with stellar data
author = Wolfgang Kerzendorf
author_email = wkerzendorf@gmail.com
license = BSD
url = NA
edit_on_github = False
github_project = wkerzendorf/starkit
